adicionado link para o scratch

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Fá-Lá-Dó-Mi</h1>
     <h2>Jogo 1</h2>
     <iframe src="https://scratch.mit.edu/projects/741108823/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <a href="https://scratch.mit.edu/projects/741108823">Ir para o Scratch</a>
     <h2>Jogo 2</h2>
     <iframe src="https://scratch.mit.edu/projects/742911565/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <a href="https://scratch.mit.edu/projects/742911565">Ir para o Scratch</a>
     <h2>Jogo 3</h2>
     <iframe src="https://scratch.mit.edu/projects/753296018/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <a href="https://scratch.mit.edu/projects/753296018">Ir para o Scratch</a>
