adiciona um nome aos jogos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             alt="Logo FA-LA-DO-MI">
 
         <ul>
-            <li><button onclick="changeCurrentGame(1)">Quiz 1</button></li>
-            <li><button onclick="changeCurrentGame(2)">Quiz 2</button></li>
-            <li><button onclick="changeCurrentGame(3)">Quiz 3</button></li>
+            <li><button onclick="changeCurrentGame(1)">Quiz 1 - Introduction</button></li>
+            <li><button onclick="changeCurrentGame(2)">Quiz 2 - Galaxy Shot</button></li>
+            <li><button onclick="changeCurrentGame(3)">Quiz 3 - Conclusion</button></li>
         </ul>
 
         <a href="https://github.com/matheusbonato" target="_blank"><i class="fa-brands fa-github"></i> GitHub <i
