titulo do site alterado

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
             <span>
                 <img src="https://cdn.discordapp.com/attachments/817862530813657118/1045143013225136188/pentagrama.png"
                     alt="Pentagrama" class="pentagrama">
-                <p>Make walking your daily</p>
+                <p>Fá-Lá-Dó-Mi</p>
             </span>
             <span>
-                <p>Habitat that rewards
-                <p>Enjoy outdoors</p>
-                </p>
+                <p>Gamificando a teoria musical</p>
             </span>
         </div>
 
